--- a/dic.css
+++ b/dic.css
@@ -1,25 +1,45 @@
 body{
     margin: 0px;
+    font-family: Crimson Text;
+    background-color: #EDF1D6;
 }
 #mm{
-    width: 55px;
+    max-width: 55px;
+    max-height: 55px;
 }
+.p1{
+    color: #40513B;
+    /* font-size: 50px; */
+    font-family: 'Pacifico', cursive;
+}
+
 .nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-content: baseline;
     padding-top: 30px;
 }
 select{
     border: none;
     
 }
+.nope{
+    background-color: #EDF1D6;
+    border: none;
+    transform: translate(250px,-20px);
+}
+.start,.star{
+    text-align: center;
+    padding-top: 150px;
+    color: #40513B;
+}
 select:focus{
     outline: none;
 }
 #lp{
-    background-color: rgb(240,240,240);
-    border: none;
+    background-color: #E9EDC9;
+    border: solid;
     width: 500px;
     height: 40px;
     border-radius: 9px;
@@ -42,16 +62,20 @@ select:focus{
     
 }
 #bit{
-    border: none;
+    background-color: #E9EDC9;
+    border: solid;
+    border-left: none;
+    border-right: none;
     transform: translate(-50px);    
 }
 #h{
     font-size: 50px;
+    color: #40513B;
 }
 #hh{
     font-size: 18px;
     transform: translateY(-30px);
-    color: #b88adc;
+    color: #609966;
 }
 .mai2{
 display: flex;
@@ -81,7 +105,8 @@ align-items: center;
 #p1{
     font-weight: 700;
     font-size: 23px;
-    transform: translate(340px);
+    text-align: center;
+    /* transform: translate(340px); */
 }
  
 .oiu{
@@ -93,7 +118,7 @@ hr{
     background-color: #fbfbfb;
 }
 #lis,#p2{
-    color: rgb(192, 190, 190);
+    color: #609966;
 }
 #p2{
     font-size: 18px;
@@ -103,13 +128,13 @@ hr{
     color: black;
 } */
 li{
-    color: rgb(227, 85, 227);
+    color: #609966;
 }
 li span{
     color: black;
 }
 #p3{
-    color: rgb(250, 1, 250);
+    color: #609966;
     font-weight: 600;
     font-size: 18px;
 }
